<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <Button
            style="@style/category_button"
            android:id="@+id/category_100"
            android:text="@string/category_100"
            />
        <Button
            style="@style/category_button"
            android:id="@+id/category_200"
            android:text="@string/category_200"
            />
        <Button
            style="@style/category_button"
            android:id="@+id/category_300"
            android:text="@string/category_300"
            />
        <Button
            style="@style/category_button"
            android:id="@+id/category_400"
            android:text="@string/category_400"
            />
        <Button
            style="@style/category_button"
            android:id="@+id/category_500"
            android:text="@string/category_500"/>
        <Button
            style="@style/category_button"
            android:id="@+id/category_600"
            android:text="@string/category_600"
            />
    </LinearLayout>
</RelativeLayout>